--- a/app/components/card/_card.scss
+++ b/app/components/card/_card.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   padding: 5px;
   margin-bottom: 5px;
-  border-radius: 5px;
+  border-radius: $border-radius;
   color: $color-light;
   font-size: $font-size-m;
   position: relative;
@@ -19,58 +19,12 @@
     width: 80%;
     resize: none;
     overflow: hidden;
-
-    .input {
-      font-size: $font-size-m;
-      width: 100%;
-      background: transparent;
-      border: 0;
-      padding: 0;
-      color: $color-light;
-    }
-
-    .description {
-      font-size: $font-size-s;
-      width: 100%;
-      font-family: $font-family;
-      color: $color-light;
-      resize: none;
-      overflow: hidden;
-    }
   }
 
   .buttons-wrapper {
     position: absolute;
     top: 0;
     right: 0;
-  }
-
-  .button {
-    background: transparent;
-    font-size: $font-size-l;
-    border: 0;
-    padding: 0;
-    color: $color-light;
-    cursor: pointer;
-
-    &:hover {
-      color: $color-accent;
-    }
-  }
-
-  .delete:before {
-    @include icon();
-    content: 'd';
-  }
-
-  .save:before {
-    @include icon();
-    content: 'c';
-  }
-
-  .edit:before {
-    @include icon();
-    content: 'b';
   }
 
   .read-only-text {
