--- a/app/components/card/card.html
+++ b/app/components/card/card.html
@@ -10,7 +10,8 @@
         <div class="buttons-wrapper">
             <button type="button" ng-click="flipReadOnly()" ng-show="readOnly" class="button edit"></button>
             <button type="button" ng-click="editCard()" ng-hide="readOnly" class="button save"></button>
-            <button type="button" ng-click="delete(ngModel)" class="button delete"></button>
+            <button type="button" ng-click="delete(ngModel)" ng-show="readOnly" class="button delete"></button>
+            <button type="button" ng-click="flipReadOnly(ngModel)" ng-hide="readOnly" class="button delete"></button>
         </div>
     </form>
 </div>
