--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -3,6 +3,9 @@ $color-primary-dark: #0097a7;
 $color-accent: #ffab40;
 $color-light: #fff;
 
+$color-ok: #88c100;
+$color-warning: #ff003c;
+
 $font-size-l: 30px;
 $font-size-m: 22px;
 $font-size-s: 16px;
