--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,6 +4,8 @@
 @import '_variables.scss';
 @import '_mixins.scss';
 
+@import '../assets/angular-pickadate/_angular-pickadate.scss';
+
 @import '../components/common/_common.scss';
 
 @import '../components/_main.scss';
