--- a/app/components/list/_list.scss
+++ b/app/components/list/_list.scss
@@ -54,7 +54,7 @@
   background-color: $color-primary-dark;
   border-radius: $border-radius;
   margin: 5px;
-  padding: 0 5px;
+  padding: 0 5px 40px 5px;
   position: relative;
 }
 
