--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,6 +12,7 @@
 
 @import '../components/list/_list.scss';
 @import '../components/card/_card.scss';
+@import '../components/contenteditable/_contenteditable.scss';
 
 body {
   background-color: $color-primary-dark;
